force-app/main/default/objects/sugati__Remittance__c/sugati__Remittance__c.object-meta.xml
<CustomObject>
    <label>Remittance</label>
    <nameField>
        <displayFormat>RM-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remittances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>