force-app/main/default/objects/sugati__Remittance__c/fields/sugati__Remittance_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Remittance_Type__c</fullName>
    <label>Remittance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supplier Payment</fullName>
            </value>
            <value>
                <fullName>Client Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>