force-app/main/default/objects/sugati__Remittance__c/fields/sugati__RM_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>sugati__RM_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>sugati__Bank_Account__c</referenceTo>
    <relationshipLabel>Remittances</relationshipLabel>
    <relationshipName>Remittances</relationshipName>
    <type>Lookup</type>
</CustomField>