force-app/main/default/objects/sugati__Remittance__c/fields/sugati__RM_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__RM_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Remittances</relationshipLabel>
    <relationshipName>Remittances</relationshipName>
    <type>Lookup</type>
</CustomField>