force-app/main/default/objects/sugati__Remittance__c/fields/sugati__RM_Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__RM_Cheque_Number__c</fullName>
    <label>Cheque Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>