force-app/main/default/objects/sugati__Remittance__c/fields/sugati__RM_Dummy_field__c.field-meta.xml
<CustomField>
    <fullName>sugati__RM_Dummy_field__c</fullName>
    <label>Dummy field</label>
    <type>Url</type>
</CustomField>