force-app/main/default/objects/sugati__Remittance__c/fields/sugati__RM_Last_Cheque_Number_Used__c.field-meta.xml
<CustomField>
    <fullName>sugati__RM_Last_Cheque_Number_Used__c</fullName>
    <label>Last Cheque Number Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>