force-app/main/default/objects/sugati__Remittance__c/fields/sugati__RM_NOTE__c.field-meta.xml
<CustomField>
    <fullName>sugati__RM_NOTE__c</fullName>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>