force-app/main/default/objects/sugati__Remittance__c/fields/sugati__RM_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__RM_Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>