force-app/main/default/objects/sugati__Remittance__c/fields/sugati__RM_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>sugati__RM_Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>FX Transfer</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>