force-app/main/default/objects/sugati__Remittance__c/fields/sugati__RM_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>sugati__RM_Payment_Reference__c</fullName>
    <label>Payment Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>