force-app/main/default/objects/sugati__Remittance__c/fields/sugati__RM_Remittance_Comments__c.field-meta.xml
<CustomField>
    <fullName>sugati__RM_Remittance_Comments__c</fullName>
    <label>Remittance Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>