force-app/main/default/objects/sugati__Remittance__c/fields/sugati__RM_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__RM_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Remittances</relationshipLabel>
    <relationshipName>Remittances</relationshipName>
    <type>Lookup</type>
</CustomField>