force-app/main/default/objects/sugati__Remittance__c/fields/sugati__RM_Supplier_Payment_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__RM_Supplier_Payment_Currency__c</fullName>
    <label>Supplier Payment Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>