force-app/main/default/objects/sugati__Remittance__c/fields/sugati__RM_Total_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__RM_Total_Payment_Amount__c</fullName>
    <label>Total Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>