force-app/main/default/objects/sugati__Remittance__c/fields/sugati__S_RM_Remittance__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RM_Remittance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remittance</label>
    <referenceTo>sugati__Remittance__c</referenceTo>
    <relationshipLabel>Remittances</relationshipLabel>
    <relationshipName>Remittances</relationshipName>
    <type>Lookup</type>
</CustomField>