force-app/main/default/objects/sugati__Remittance__c/fields/sugati__S_RM_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RM_Settlement_Date__c</fullName>
    <label>Settlement Date</label>
    <type>Date</type>
</CustomField>